# shout-in-silence-backend

./: .gitignore  main.py  pyproject.toml
api/v1/: apis.py
core/: mongodb.py  redis_manager.py  settings.py  websocket_manager.py
static/: index.html
