[tool.poetry]
name = "shout-in-silence"
version = "0.1.0"
description = ""
authors = ["Naro <knnarro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
ruff = "^0.3.0"
pre-commit = "^3.6.2"
websockets = "^12.0"
python-dotenv = "^1.0.1"
redis = "^5.0.2"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
